<resources>
    <string name="app_name">Hangman</string>
    <string name="multiplayerButton">Multiplayer</string>
    <string name="singlePlayerButton">Single Player</string>
    <string name="title">Hangman</string>
    <string name="title_activity_single_player">singlePlayerActivity</string>
    <string name="image">Cat Image</string>
    <string name="head">The Head</string>
    <string name="body">The Body</string>
    <string name="arm">An Arm</string>
    <string name="leg">A Leg</string>
    <string name="gallows">The Gallows</string>
    <string name="reset">RESET</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="btn_add_word">SEND</string>
    <string name="add_word_hint">Enter word here</string>
</resources>
