<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".multiplayerActivity">


    <ImageView
        android:id="@+id/gallows"
        android:layout_width="386dp"
        android:layout_height="315dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/gallows"
        android:scaleType="center"
        android:src="@drawable/hangman_gallow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/head"
        android:layout_width="140dp"
        android:layout_height="69dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/head"
        android:src="@drawable/head"
        app:layout_constraintBottom_toBottomOf="@+id/gallows"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432" />

    <ImageView
        android:id="@+id/body"
        android:layout_width="140dp"
        android:layout_height="73dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/body"
        android:src="@drawable/body"
        app:layout_constraintBottom_toBottomOf="@+id/gallows"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/head"
        app:layout_constraintVertical_bias="0.325" />

    <ImageView
        android:id="@+id/arm1"
        android:layout_width="55dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/arm"
        android:src="@drawable/left_arm"
        app:layout_constraintBottom_toBottomOf="@+id/gallows"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/head"
        app:layout_constraintVertical_bias="0.305" />

    <ImageView
        android:id="@+id/arm2"
        android:layout_width="55dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/arm"
        android:src="@drawable/right_arm"
        app:layout_constraintEnd_toEndOf="@+id/gallows"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/head" />

    <ImageView
        android:id="@+id/leg1"
        android:layout_width="35dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/leg"
        android:src="@drawable/left_leg"
        app:layout_constraintBottom_toBottomOf="@+id/gallows"
        app:layout_constraintEnd_toEndOf="@+id/gallows"
        app:layout_constraintHorizontal_bias="0.752"
        app:layout_constraintStart_toStartOf="@+id/gallows"
        app:layout_constraintTop_toBottomOf="@+id/head"
        app:layout_constraintVertical_bias="0.376" />

    <ImageView
        android:id="@+id/leg2"
        android:layout_width="35dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/leg"
        android:src="@drawable/right_leg"
        app:layout_constraintBottom_toBottomOf="@+id/gallows"
        app:layout_constraintEnd_toEndOf="@+id/gallows"
        app:layout_constraintHorizontal_bias="0.693"
        app:layout_constraintStart_toStartOf="@+id/gallows"
        app:layout_constraintTop_toBottomOf="@+id/head"
        app:layout_constraintVertical_bias="0.376" />


    <LinearLayout
        android:id="@+id/word"
        android:layout_width="349dp"
        android:layout_height="71dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="#00FF08"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/letters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gallows" />


    <GridView
        android:id="@+id/letters"
        android:layout_width="386dp"
        android:layout_height="134dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="#000000"
        android:horizontalSpacing="5dp"
        android:numColumns="9"
        android:padding="5dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>